--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 
@@ -41,6 +43,7 @@
         </a>
         <!-- инпут -->
         <div class="input-container">
+            <input type="text" class="input-container__input-search">
             <a href="#" class="input-container__loop">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -48,7 +51,6 @@
                         fill="#44944A" />
                 </svg>
             </a>
-            <input type="text" class="input-container__input-search">
         </div>
         <!-- header меню -->
         <div class="header-menu">
@@ -77,6 +79,56 @@
             </button>
         </div>
     </header>
+    <section class="main-section">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item carousel-item-1 active">
+                    <img src="/img/картинка поля с трактором.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/image1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/image2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
