Доработал header и infonews-section

--- a/index.html
+++ b/index.html
@@ -119,13 +119,27 @@
             </button>
         </div>
     </section>
+    <section class="infonews-section">
+        <div class="news-container" id="content-box">
+            <article class="news-1 news-size">
+                <img class="news-1__img news-image" src="/img/news-image.svg" alt="">
+                <p class="news-1__text news-text-size">Сайт Агро-Вики создан для поиска нужной информации в агрономии. Также планируется создать, чтобы агрономы всей страны могли обмениваться личным опытом и мнением.</p>
+            </article>
+        </div>
+        <div class="infonews-section__button-link">
+            <div id="toggle-btn" class="button-container">
+                <p class="button-container__text">
+                    Подробнее
+                </p>
+            </div>
+        </div>
+    </section>
+    
 
 
 
 
-
-
-
+    <script src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
