--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="input-container">
             <input type="text" class="input-container__input-search">
             <a href="#" class="input-container__loop">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                <svg class="input-container__loop-svg" xmlns="http://www.w3.org/2000/svg" width="26" height="26"
+                    viewBox="0 0 26 26" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M19.8273 11.3294C19.8273 12.4454 19.6075 13.5504 19.1804 14.5814C18.7534 15.6124 18.1274 16.5492 17.3383 17.3383C16.5492 18.1274 15.6124 18.7534 14.5814 19.1804C13.5504 19.6075 12.4454 19.8273 11.3294 19.8273C10.2134 19.8273 9.10842 19.6075 8.0774 19.1804C7.04639 18.7534 6.10959 18.1274 5.32049 17.3383C4.53139 16.5492 3.90544 15.6124 3.47838 14.5814C3.05132 13.5504 2.83152 12.4454 2.83152 11.3294C2.83152 9.07563 3.72683 6.91416 5.32049 5.32049C6.91415 3.72683 9.07563 2.83152 11.3294 2.83152C13.5832 2.83152 15.7447 3.72683 17.3383 5.32049C18.932 6.91416 19.8273 9.07563 19.8273 11.3294ZM18.2788 20.2805C16.0021 22.048 13.1373 22.8815 10.2677 22.6111C7.39816 22.3407 4.73947 20.9869 2.83293 18.8253C0.92639 16.6637 -0.0846771 13.8567 0.00555946 10.9758C0.095796 8.09493 1.28055 5.35673 3.31864 3.31864C5.35673 1.28055 8.09493 0.095796 10.9758 0.00555946C13.8567 -0.0846771 16.6637 0.92639 18.8253 2.83293C20.9869 4.73947 22.3407 7.39816 22.6111 10.2677C22.8815 13.1373 22.048 16.0021 20.2805 18.2788L25.5492 23.5475C25.6884 23.6772 25.8 23.8335 25.8774 24.0073C25.9548 24.181 25.9964 24.3685 25.9998 24.5587C26.0031 24.7489 25.9682 24.9378 25.8969 25.1141C25.8257 25.2905 25.7197 25.4507 25.5852 25.5852C25.4507 25.7197 25.2905 25.8257 25.1141 25.8969C24.9378 25.9682 24.7489 26.0031 24.5587 25.9998C24.3685 25.9964 24.181 25.9548 24.0073 25.8774C23.8335 25.8 23.6772 25.6884 23.5475 25.5492L18.2788 20.2805Z"
                         fill="#44944A" />
@@ -79,11 +80,11 @@
             </button>
         </div>
     </header>
-    <section class="main-section">
+    <!-- <section class="main-section">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item carousel-item-1 active">
-                    <img src="/img/картинка поля с трактором.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/картинка поля с трактором.jpg" class="d-block w-100" alt="Слайд 1">
                     <div class="carousel-item__title-container">
                         <h1 class="carousel-item__title">
                             Сайт-форум для агрономов <br> Библиотека агрономии
@@ -91,15 +92,15 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/image1.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/image1.jpg" class="d-block w-100" alt="Слайд 2">
                     <div class="carousel-item__title-container">
                         <h1 class="carousel-item__title">
-                            Сайт-форум для агрономов <br> Библиотека агрономии
+                            Агрономия, овцеводство, <br> садоводство, всякое разное.
                         </h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/image2.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/image2.jpg" class="d-block w-100" alt="Слайд 3">
                     <div class="carousel-item__title-container">
                         <h1 class="carousel-item__title">
                             Сайт-форум для агрономов <br> Библиотека агрономии
@@ -119,12 +120,72 @@
             </button>
         </div>
     </section>
+
     <section class="infonews-section">
         <div class="news-container" id="content-box">
-            <article class="news-1 news-size">
-                <img class="news-1__img news-image" src="/img/news-image.svg" alt="">
-                <p class="news-1__text news-text-size">Сайт Агро-Вики создан для поиска нужной информации в агрономии. Также планируется создать, чтобы агрономы всей страны могли обмениваться личным опытом и мнением.</p>
-            </article>
+        </div>
+        <div class="infonews-section__button-link">
+            <div id="toggle-btn" class="button-container">
+                <p class="button-container__text">Подробнее</p>
+            </div>
+        </div>
+    </section>
+    <section class="category-section">
+        <div class="category-section__left-container">
+            <h1 class="category-section__text">
+                Библиотека
+            </h1>
+        </div>
+        <div class="category-section__right-container">
+            <h1 class="category-section__text">
+                Популярное
+            </h1>
+        </div>
+    </section> -->
+    <section class="main-section">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item carousel-item-1 active">
+                    <img src="/img/картинка поля с трактором.jpg" class="d-block w-100" alt="Слайд 1">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/image1.jpg" class="d-block w-100" alt="Слайд 2">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/image2.jpg" class="d-block w-100" alt="Слайд 3">
+                    <div class="carousel-item__title-container">
+                        <h1 class="carousel-item__title">
+                            Сайт-форум для агрономов <br> Библиотека агрономии
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+    <section class="infonews-section">
+        <div class="news-container" id="content-box">
+            <!-- Контент обновляется через JavaScript -->
         </div>
         <div class="infonews-section__button-link">
             <div id="toggle-btn" class="button-container">
@@ -134,7 +195,6 @@
             </div>
         </div>
     </section>
-    
 
 
 
