--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Агро-Вики</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
 </head>
 
 <body>
@@ -80,68 +80,6 @@
             </button>
         </div>
     </header>
-    <!-- <section class="main-section">
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item carousel-item-1 active">
-                    <img src="/img/картинка поля с трактором.jpg" class="d-block w-100" alt="Слайд 1">
-                    <div class="carousel-item__title-container">
-                        <h1 class="carousel-item__title">
-                            Сайт-форум для агрономов <br> Библиотека агрономии
-                        </h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/img/image1.jpg" class="d-block w-100" alt="Слайд 2">
-                    <div class="carousel-item__title-container">
-                        <h1 class="carousel-item__title">
-                            Агрономия, овцеводство, <br> садоводство, всякое разное.
-                        </h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="/img/image2.jpg" class="d-block w-100" alt="Слайд 3">
-                    <div class="carousel-item__title-container">
-                        <h1 class="carousel-item__title">
-                            Сайт-форум для агрономов <br> Библиотека агрономии
-                        </h1>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
-
-    <section class="infonews-section">
-        <div class="news-container" id="content-box">
-        </div>
-        <div class="infonews-section__button-link">
-            <div id="toggle-btn" class="button-container">
-                <p class="button-container__text">Подробнее</p>
-            </div>
-        </div>
-    </section>
-    <section class="category-section">
-        <div class="category-section__left-container">
-            <h1 class="category-section__text">
-                Библиотека
-            </h1>
-        </div>
-        <div class="category-section__right-container">
-            <h1 class="category-section__text">
-                Популярное
-            </h1>
-        </div>
-    </section> -->
     <section class="main-section">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -182,7 +120,6 @@
             </button>
         </div>
     </section>
-
     <section class="infonews-section">
         <div class="news-container" id="content-box">
             <!-- Контент обновляется через JavaScript -->
@@ -192,6 +129,71 @@
                 <p class="button-container__text">
                     Подробнее
                 </p>
+            </div>
+        </div>
+    </section>
+    <section class="category-section">
+        <div class="category-section__title">
+            <div class="category-section__left-container">
+                <h1 class="category-section__left-container__title">
+                    Библиотека
+                </h1>
+            </div>
+            <div class="category-section__right-container">
+                <h1 class="category-section__right-container__title">
+                    Актуальное
+                </h1>
+            </div>
+        </div>
+        <!-- Сами категории -  карточки -->
+        <div class="category-section__category-cards">
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
+            </div>
+            <div class="category-cards__card">
+                <h2 class="category-cards__card__title">Земледелие</h2>
+                <div class="category-cards__card__button-container">
+                    <p class="category-cards__card__button-link">Перейти </p><img src="/img/arrow-right.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
