Добавил index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
     </section>
     <section class="category-section">
-        <div class="slider">
+        <!-- <div class="slider"> -->
             <input type="radio" id="library" name="slider" checked>
             <input type="radio" id="categories" name="slider">
             <div class="slider-buttons">
@@ -274,7 +274,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
         <!-- <div class="category-section__title">
             <span><a href="#">Библиотека</a></span>
             <a href="#">Актульное</a>
