--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <title>Агро-Вики</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="icon" href="/img/favicon16×16.png"><!-- 16×16 -->
-    <link rel="icon" href="/img/favicon32×32.png"><!-- 32×32 -->
+    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/img/favicon-16×16.png"><!-- 16×16 -->
+    <link rel="icon" href="/img/favicon-32×32.png"><!-- 32×32 -->
     <!-- Montserrat шрифты -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
     <div id="loading-screen">
-        <!-- <div class="spinner"></div> -->
-        <img src="/img/KOLOS.gif" alt="">
+        <div class="spinner"></div>
     </div>
     <header class="header">
         <!--лого -->
@@ -53,7 +51,7 @@
         <div class="header-menu">
             <div class="input-container">
                 <input placeholder="Поиск по сайту" type="text" class="input-container__input-search">
-                <a href="#">
+                <a href="/page2.html">
                     <div class="loop">
                         <svg class="input-container__loop-svg" xmlns="http://www.w3.org/2000/svg" width="26" height="26"
                             viewBox="0 0 26 26" fill="none">
@@ -76,22 +74,22 @@
                 <a href="page2.html" class="menu-link">
                     <li class="menu-item">Библиотека</li>
                 </a>
-                <a href="#" class="menu-link">
+                <a href="/page2.html" class="menu-link">
                     <li class="menu-item">Новости</li>
                 </a>
-                <a href="#" class="menu-link">
+                <a href="/page2.html" class="menu-link">
                     <li class="menu-item">О нас</li>
                 </a>
                 <a href="page2.html" class="menu-link">
                     <li class="menu-item">Поддержка</li>
                 </a>
-                <a href="#" class="menu-link">
+                <a href="https://forum.agro-wiki.ru" class="menu-link">
                     <li class="menu-item">Форум</li>
                 </a>
             </ol>
             <!-- </div> -->
             <!-- картинка пользователя -->
-            <a href="#" class="user-link-account">
+            <a href="/page2.html" class="user-link-account">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="32" viewBox="0 0 35 32" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M19.9999 7.68002C19.9999 11.9216 16.642 15.36 12.4999 15.36C8.35782 15.36 4.99996 11.9216 4.99996 7.68002C4.99996 3.43847 8.35782 0 12.4999 0C16.642 0 19.9999 3.43847 19.9999 7.68002ZM12.4999 17.92C5.59641 17.92 0 23.6508 0 30.72C0 31.4268 0.559641 32 1.24999 32H23.7498C24.4402 32 24.9998 31.4268 24.9998 30.72C24.9998 23.6508 19.4034 17.92 12.4999 17.92ZM33.75 32H27.9438C28.0618 31.5945 28.125 31.1647 28.125 30.72C28.125 25.4948 25.6791 20.8547 21.8956 17.9347C22.0959 17.9249 22.2974 17.92 22.5 17.92C29.4035 17.92 35 23.6508 35 30.72C35 31.4268 34.4403 32 33.75 32ZM22.5 15.36C21.7457 15.36 21.0174 15.246 20.3307 15.0338C22.0659 13.0974 23.125 10.5154 23.125 7.68002C23.125 4.84468 22.0659 2.26266 20.3307 0.32617C21.0174 0.114023 21.7457 0 22.5 0C26.6421 0 30 3.43847 30 7.68002C30 11.9216 26.6421 15.36 22.5 15.36Z"
@@ -220,7 +218,7 @@
                                 растений, включая способы размножения и современные технологии выращивания посадочного
                                 материала. </p>
                             <button class="book-card__button">
-                                <a href="" class="book-card__link">Читать</a>
+                                <a href="/page2.html" class="book-card__link">Читать</a>
                             </button>
                         </div>
                     </article>
@@ -232,7 +230,7 @@
                                 агрохимии, основы питания растений, агрохимические свойства почв, химическая их
                                 мелиорация, химические элементы в жизни растений.</p>
                             <button class="book-card__button">
-                                <a href="" class="book-card__link">Читать</a>
+                                <a href="/page2.html" class="book-card__link">Читать</a>
                             </button>
                         </div>
                     </article>
@@ -244,7 +242,7 @@
                                 по специальности «Агрономия» и в соответствии с федеральным базисным учебным планом,
                                 примерными учебными планами для образовательных учреждений Российской Федерации</p>
                             <button class="book-card__button">
-                                <a href="" class="book-card__link">Читать</a>
+                                <a href="/page2.html" class="book-card__link">Читать</a>
                             </button>
                         </div>
                     </article>
@@ -256,7 +254,7 @@
                                 человека трудно переоценить. Его плоды потребляются в свежем виде и перерабатываются в
                                 различные продукты, включая восточные сладости.</p>
                             <button class="book-card__button">
-                                <a href="" class="book-card__link">Читать</a>
+                                <a href="/page2.html" class="book-card__link">Читать</a>
                             </button>
                         </div>
                     </article>
@@ -360,9 +358,11 @@
                         высокоценный металл.</span> </p>
             </div>
             <div class="content-section__button">
-                <button class="content-section__button-link button-hover-green">
-                    Читать дальше
-                </button>
+                <a href="/page2.html">
+                    <button class="content-section__button-link button-hover-green">
+                        Читать дальше
+                    </button>
+                </a>
             </div>
         </article>
         <article class="bio-container">
@@ -394,9 +394,11 @@
                 </div>
             </div>
             <div class="bio-container__button">
-                <button class="bio-container__button-link button-hover-green">
-                    Вся Биография
-                </button>
+                <a href="/page2.html">
+                    <button class="bio-container__button-link button-hover-green">
+                        Вся Биография
+                    </button>
+                </a>
             </div>
         </article>
         <img class="circle-1" src="/img/circle.png" alt="">
@@ -515,7 +517,7 @@
             <ol class="footer-contacts__social-links">
                 <li>
                     <a class="footer-contacts__social-link" href="https:vk.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="54" height="51" viewBox="0 0 54 54" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 54 54" fill="none">
                             <path
                                 d="M26.9981 1.08008C12.6827 1.08008 1.07812 12.6847 1.07812 27.0001C1.07812 41.3155 12.6827 52.9201 26.9981 52.9201C41.3135 52.9201 52.9181 41.3155 52.9181 27.0001C52.9181 12.6847 41.3135 1.08008 26.9981 1.08008ZM36.9665 30.3238C36.9665 30.3238 39.2588 32.5864 39.8231 33.6367C39.8393 33.6601 39.8492 33.6781 39.8528 33.6907C40.0814 34.0741 40.1381 34.3774 40.0229 34.6006C39.8339 34.9732 39.1859 35.1568 38.9645 35.173H34.9145C34.6337 35.173 34.0451 35.1001 33.3323 34.6087C32.7842 34.2253 32.2442 33.5962 31.7177 32.9833C30.932 32.0707 30.2516 31.2823 29.5658 31.2823C29.4787 31.2819 29.3921 31.2956 29.3093 31.3228C28.7909 31.4902 28.1267 32.23 28.1267 34.201C28.1267 34.8166 27.6407 35.1703 27.2978 35.1703H25.4429C24.8111 35.1703 21.5198 34.9489 18.6038 31.8736C15.0344 28.1071 11.8214 20.5525 11.7944 20.4823C11.5919 19.9936 12.0104 19.7317 12.4667 19.7317H16.5572C17.1026 19.7317 17.2808 20.0638 17.405 20.3581C17.5508 20.701 18.0854 22.0645 18.9629 23.5981C20.3858 26.0983 21.2579 27.1135 21.9572 27.1135C22.0883 27.1119 22.2171 27.0786 22.3325 27.0163C23.2451 26.5087 23.075 23.2552 23.0345 22.5802C23.0345 22.4533 23.0318 21.1249 22.5647 20.4877C22.2299 20.026 21.6602 19.8505 21.3146 19.7857C21.4545 19.5927 21.6388 19.4361 21.8519 19.3294C22.4783 19.0162 23.6069 18.9703 24.7274 18.9703H25.3511C26.5661 18.9865 26.8793 19.0648 27.3194 19.1755C28.2104 19.3888 28.2293 19.9639 28.151 21.9322C28.1267 22.4911 28.1024 23.1229 28.1024 23.8681L28.0943 24.3865C28.0673 25.3882 28.0349 26.5249 28.7423 26.992C28.8335 27.0521 28.9409 27.0832 29.0501 27.0811C29.2958 27.0811 30.0356 27.0811 32.039 23.644C32.6546 22.5365 33.1914 21.3871 33.6455 20.2042C33.686 20.134 33.8048 19.918 33.9452 19.8343C34.0499 19.7845 34.1641 19.7578 34.28 19.756H39.0887C39.6125 19.756 39.9716 19.8343 40.0391 20.0368C40.1579 20.3581 40.0175 21.3382 37.8224 24.3109L36.8423 25.6042C34.8524 28.2124 34.8524 28.3447 36.9665 30.3238Z"
                                 fill="#44944A" />
@@ -524,7 +526,7 @@
                 </li>
                 <li>
                     <a class="footer-contacts__social-link" href="https:telegram.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="51" height="48" viewBox="0 0 51 51" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 51 51" fill="none">
                             <g clip-path="url(#clip0_674_414)">
                                 <path
                                     d="M51 25.5C51 32.263 48.3134 38.749 43.5312 43.5312C38.749 48.3134 32.263 51 25.5 51C18.737 51 12.251 48.3134 7.46878 43.5312C2.6866 38.749 0 32.263 0 25.5C0 18.737 2.6866 12.251 7.46878 7.46878C12.251 2.6866 18.737 0 25.5 0C32.263 0 38.749 2.6866 43.5312 7.46878C48.3134 12.251 51 18.737 51 25.5ZM26.4148 18.8254C23.9328 19.8581 18.9752 21.9937 11.5419 25.2322C10.3371 25.7104 9.70488 26.18 9.64538 26.6411C9.54975 27.4157 10.5219 27.7217 11.8448 28.1393L12.4026 28.3146C13.7031 28.7385 15.4562 29.2326 16.3646 29.2517C17.1934 29.2729 18.1156 28.9329 19.1314 28.2317C26.078 23.5439 29.6629 21.1746 29.886 21.1236C30.0454 21.0853 30.2685 21.0407 30.4151 21.1746C30.5617 21.3084 30.549 21.5571 30.5331 21.624C30.4374 22.0352 26.622 25.5797 24.6489 27.4157C24.0337 27.9894 23.5971 28.3943 23.5078 28.4867C23.3113 28.6876 23.1116 28.8853 22.9086 29.0796C21.6973 30.2462 20.7921 31.1196 22.9564 32.5476C23.9987 33.2361 24.8338 33.8002 25.6658 34.3676C26.571 34.986 27.4762 35.6012 28.6492 36.3726C28.9467 36.5681 29.2336 36.7667 29.5099 36.9686C30.5649 37.7209 31.518 38.3966 32.6878 38.2883C33.3699 38.2245 34.0744 37.587 34.4314 35.6745C35.2761 31.1578 36.9368 21.3754 37.3193 17.3432C37.3433 17.008 37.3294 16.6712 37.2778 16.3391C37.2469 16.0714 37.1174 15.8248 36.9144 15.6474C36.624 15.448 36.2785 15.3444 35.9263 15.351C34.9701 15.3669 33.4942 15.8801 26.4148 18.8254Z"
@@ -540,7 +542,7 @@
                 </li>
                 <li>
                     <a class="footer-contacts__social-link" href="https:whatsapp.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="49" height="45" viewBox="0 0 49 49" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 49 49" fill="none">
                             <path
                                 d="M24.5001 0C10.991 0 0.000158103 10.9909 0.000158103 24.5C0.000158103 28.7183 1.08987 32.8662 3.15639 36.5263L0.039571 47.6472C-0.0626896 48.0125 0.0363754 48.4045 0.300548 48.6762C0.504004 48.886 0.78096 49 1.06537 49C1.15059 49 1.23687 48.9893 1.32102 48.9691L12.9276 46.0941C16.4716 47.9966 20.4629 49 24.5001 49C38.0091 49 49 38.0091 49 24.5C49 10.9909 38.0091 0 24.5001 0ZM36.8246 33.1453C36.3005 34.5961 33.7866 35.9202 32.5787 36.0981C31.4943 36.2568 30.1223 36.325 28.6161 35.852C27.7032 35.5644 26.5314 35.1831 25.0306 34.5429C18.7213 31.8521 14.601 25.5791 14.2857 25.1647C13.9715 24.7503 11.7175 21.7975 11.7175 18.7414C11.7175 15.6853 13.342 14.1823 13.9193 13.5602C14.4967 12.9381 15.1773 12.7826 15.597 12.7826C16.0167 12.7826 16.4353 12.7879 16.8028 12.805C17.1895 12.8242 17.7083 12.659 18.2185 13.8713C18.7426 15.1154 20.0006 18.1715 20.1561 18.4837C20.3138 18.7947 20.4182 19.1579 20.2094 19.5723C20.0006 19.9867 19.8962 20.2455 19.5809 20.6088C19.2656 20.972 18.9205 21.4183 18.6371 21.6974C18.3218 22.0074 17.9948 22.3429 18.3613 22.965C18.7277 23.5871 19.99 25.6206 21.8605 27.2674C24.2625 29.383 26.2896 30.0391 26.9181 30.3502C27.5466 30.6612 27.9141 30.609 28.2805 30.1947C28.647 29.7792 29.8528 28.3806 30.2714 27.7596C30.69 27.1385 31.1097 27.2408 31.6871 27.4485C32.2644 27.6552 35.3567 29.1571 35.9852 29.4682C36.6137 29.7792 37.0334 29.9347 37.191 30.1936C37.3487 30.4514 37.3487 31.6955 36.8246 33.1453Z"
                                 fill="#44944A" />
@@ -549,7 +551,7 @@
                 </li>
                 <li>
                     <a class="footer-contacts__social-link" href="https:instagram.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="54" height="48" viewBox="0 0 54 54" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 54 54" fill="none">
                             <path
                                 d="M18 27C18 24.6131 18.9482 22.3239 20.636 20.636C22.3239 18.9482 24.6131 18 27 18C29.3869 18 31.6761 18.9482 33.364 20.636C35.0518 22.3239 36 24.6131 36 27C36 29.3869 35.0518 31.6761 33.364 33.364C31.6761 35.0518 29.3869 36 27 36C24.6131 36 22.3239 35.0518 20.636 33.364C18.9482 31.6761 18 29.3869 18 27Z"
                                 fill="#44944A" />
